# p78_nrf24

./: .gitignore  CMakeLists.txt  README.md  nrf24l01.c  nrf24l01.h  platform_specific.h
platform_specific/: CMakeLists.txt  platform_rpipico.c  platform_stm32f4.c
